@@ -4,6 +4,10 @@ Changelog
 1.0b2 - unreleased
 ------------------
 
+* Do not assume "view" is the right immediate view - in some cases
+  it might not exist. Instead use the absolute URL directly.
+  [wichert]
+
 1.0b1 - 2010-04-20
 ------------------
 
